--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
         with:
           cdk_subcommand: 'synth'
           cdk_version: '1.16.2'
-          working_dir: 'CDK-Series'
+          working_dir: '../CDK-Series'
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -29,7 +29,7 @@ jobs:
         uses: youyo/aws-cdk-github-actions@v2
         with:
           cdk_subcommand: 'deploy'
-          working_dir: 'CDK-Series'
+          working_dir: '../CDK-Series'
           cdk_args: '--require-approval never'
           actions_comment: false
         env:
