--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
         uses: youyo/aws-cdk-github-actions@v2
         with:
           cdk_subcommand: 'deploy'
-          working_dir: '../CDK-AWS'
+          working_dir: CDK-AWS
           cdk_args: '--require-approval never'
           actions_comment: false
         env:
