--- a/.github/workflows/azure.yml
+++ b/.github/workflows/azure.yml
@@ -21,17 +21,12 @@ jobs:
     # Checkout the repository to the GitHub Actions runner
     - name: Checkout
       uses: actions/checkout@v2
- 
-    - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v1
 
     - name: Terraform Init
-      working-directory: azure-resource-group
-      run: terraform init 
-
-    - name: Terraform Format
-      working-directory: azure-resource-group
-      run: terraform fmt
+      uses: hashicorp/terraform-github-actions@master
+      with:
+        tf_actions_subcommand: 'init'
+        tf_actions_working_dir: "azure-resource-group"
 
     - name: Terraform Plan
       working-directory: azure-resource-group
