--- a/.github/workflows/azure.yml
+++ b/.github/workflows/azure.yml
@@ -25,6 +25,7 @@ jobs:
     - name: Terraform Init
       uses: hashicorp/terraform-github-actions@master
       with:
+        tf_actions_version: 0.14.8
         tf_actions_subcommand: 'init'
         tf_actions_working_dir: "azure-resource-group"
 
