--- a/.github/workflows/terraform-workspaces.yml
+++ b/.github/workflows/terraform-workspaces.yml
@@ -25,7 +25,7 @@ jobs:
         uses: hashicorp/setup-terraform@v1
 
       - name: Terraform Workspace
-        run: terraform workspace new ${{ .env.environment }}
+        run: terraform workspace new ${{ env.environment }}
       - name: Terraform Init
         working-directory: aws_s3_bucket
         run: |
