--- a/.github/workflows/terraform-workspaces.yml
+++ b/.github/workflows/terraform-workspaces.yml
@@ -28,14 +28,17 @@ jobs:
         working-directory: aws_s3_bucket
         run: |
           terraform init
+          terraform workspace new ${{ env.environment }}
+          terraform workspace select ${{ env.environment }} && terraform plan
+          terraform workspace select ${{ env.environment }} && terraform apply -auto-approve
 
-      - name: Terraform Workspace
-        run: terraform workspace new ${{ env.environment }}
+      # - name: Terraform Workspace
+      #   run: terraform workspace new ${{ env.environment }}
 
-      - name: Terraform Plan
-        working-directory: aws_s3_bucket
-        run: terraform workspace select ${{ env.environment }} && terraform plan
+      # - name: Terraform Plan
+      #   working-directory: aws_s3_bucket
+      #   run: terraform workspace select ${{ env.environment }} && terraform plan
 
-      - name: Terraform Apply
-        working-directory: aws_s3_bucket
-        run: terraform workspace select ${{ env.environment }} && terraform apply -auto-approve
+      # - name: Terraform Apply
+      #   working-directory: aws_s3_bucket
+      #   run: terraform workspace select ${{ env.environment }} && terraform apply -auto-approve
