--- a/.github/workflows/kubescape.yml
+++ b/.github/workflows/kubescape.yml
@@ -14,4 +14,5 @@ jobs:
       - name: Kubescape Action
         uses: otomato-gh/kubescape-action@v0.3.1
         with:
-          ksversion: 'v2.0.158' 
+          ksversion: 'v2.0.158'
+          path: 'ARMO'
