--- a/.github/workflows/kubescape.yml
+++ b/.github/workflows/kubescape.yml
@@ -15,4 +15,4 @@ jobs:
         uses: otomato-gh/kubescape-action@v0.3.1
         with:
           ksversion: 'v2.0.158'
-          path: 'ARMO'
+          path: 'ARMO/deployment.yaml'
